# dictum

./: .gitignore  CHANGELOG.md  CONTRACTS.md  DESIGN.md  LICENSE  NEEDS-shell.md  PLAN.md  README.md  THIRD-PARTY-LICENSES.md  history.html  main.html  overlay.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
.claude/: launch.json
finetune/: EVAL.md  README.md  eval.py  export.py  make_data.py  requirements.txt  train.py
finetune/data/: eval.jsonl  eval_raw.jsonl  raw_all.jsonl  train.jsonl
scripts/: gen-earcons.mjs  gen-icons.mjs
spike/reformat/: README.md  bench.ps1  fixtures.jsonl  system-prompt.txt
src/: bindings.ts  shared.ts  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/resources/: tray-err-dark.rgba  tray-err-light.rgba  tray-idle-dark.rgba  tray-idle-light.rgba  tray-rec-dark.rgba  tray-rec-light.rgba
src-tauri/src/: asr.rs  commands.rs  config.rs  coordinator.rs  filetag.rs  gpu.rs  guardrail.rs  history.rs  hotkey.rs  lib.rs  main.rs  model.rs  overlay.rs  reformat.rs  replacements.rs  tray.rs  types.rs  voice.rs
src-tauri/src/audio/: capture.rs  cues.rs  mod.rs  resample.rs  vad.rs
src-tauri/src/inject/: clipboard.rs  integrity.rs  mod.rs  overrides.rs  sendinput.rs
src/history/: history.css  main.ts
src/main/: main.css  main.ts  setup.ts  tape.ts  words.ts
src/overlay/: main.ts  overlay.css
src/settings/: main.ts  settings.css
